k8s/single_alb_multiple_ingress.yml
## To test it, use below curl
# curl -H "Host: nginx.com" <LB DNS URL>
# curl -H "Host: game.com" <LB DNS URL>

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: myapp
spec:
  ingressClassName: alb
  rules:
    - host: nginx.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mysvc
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-service-ingress
  namespace: game-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: myapp
spec:
  ingressClassName: alb
  rules:
    - host: game.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
